Fix contact spacing

--- a/style.css
+++ b/style.css
@@ -210,7 +210,8 @@ header {
 }
 
 .container-contact-icons {
-  margin-bottom: 4rem;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 
